--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="package_type">报文类型</string>
     <string name="btn_send">发送</string>
     <string name="btn_clear">清除</string>
+    <string name="btn_save">保存</string>
     <string name="receive">接收信息</string>
     <string name="action_modify">修改报文</string>
     <string name="action_register">REGISTER</string>
